fix: Align organizers better

--- a/styles/style.less
+++ b/styles/style.less
@@ -117,9 +117,15 @@ dd {
   }
 }
 
+#organizers .content-block {
+  margin-bottom: 0;
+}
 .organizer {
   .clearfix();
   padding-bottom: @pu2;
+}
+.organizer:last-child {
+  padding-bottom: 0;
 }
 
 body {
